# Bibliotecas

./: .gitignore  Build.md  CMake.md  Gradle.md  JMOD.md  Maven.md  README.md
c/: Makefile  aritmetica.c  aritmetica.h  chuleta.txt  main.c  plug.c
cpp/: CMakeLists.txt
cpp/MyApp/: main.cpp
cpp/MyLib2/: potencias.cpp  potencias.h
java/: Main.java  build.xml
java/aritmetica/: Aritmetica.java
